# muslim-compnion

./: MyNotes.txt  cookiecutter-config.json  django-muslim-companion.code-workspace  run_cookiecutter.py
muslim_companion/: README.md  docker-compose.production.yml  manage.py  pyproject.toml  schema.yml
muslim_companion/.devcontainer/: devcontainer.json
muslim_companion/.envs/.local/: .django
muslim_companion/backend/: middleware.py
muslim_companion/backend/analytics/: admin.py  tasks.py
muslim_companion/backend/analytics/api/: views.py
muslim_companion/backend/analytics/tests/: test_analytics_core.py
muslim_companion/backend/analytics/tests/api/: test_endpoints.py
muslim_companion/backend/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
muslim_companion/backend/core/: __init__.py  apps.py  decorators.py  exceptions.py  models.py  signals.py
muslim_companion/backend/core/logging/: __init__.py
muslim_companion/backend/core/management/commands/: warm_cache.py
muslim_companion/backend/core/services/: __init__.py  backup.py  cache_manager.py  recovery.py
muslim_companion/backend/core/tests/: test_backup.py  test_error_handling.py  test_health_check.py  test_health_liveness.py  test_health_readiness.py  test_health_readiness.py.bak  test_health_resources.py  test_health_resources.py.bak  test_logging.py  test_metadata.py.bak
muslim_companion/backend/core/utils/: abuse_detection.py  retry.py
muslim_companion/backend/core/views/: __init__.py  health.py  main.py
muslim_companion/backend/legal/: admin.py  models.py
muslim_companion/backend/legal/api/: views.py
muslim_companion/backend/quran/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
muslim_companion/backend/quran/management/commands/: import_quran_metadata.py  import_quran_text.py  (+1 more)
muslim_companion/backend/quran/migrations/: 0001_initial_surah_verse_models.py
muslim_companion/backend/quran/tests/: factories.py  test_commands.py  test_models.py  test_views.py
muslim_companion/backend/templates/: base.html
muslim_companion/backend/users/: apps.py  models.py  tasks.py  views.py
muslim_companion/backend/users/api/: serializers.py  throttling.py  views.py
muslim_companion/backend/users/migrations/: 0001_initial.py
muslim_companion/backend/users/tests/: test_models.py
muslim_companion/compose/production/traefik/: traefik.yml
muslim_companion/config/: celery_app.py  urls.py  wsgi.py
muslim_companion/config/settings/: base.py  local.py  production.py
muslim_companion/docs/: conf.py  index.rst  users.rst
muslim_companion/docs/Data/: Riwayah-Transmission.csv  quran-uthmani.xml
muslim_companion/locale/en/LC_MESSAGES/: django.po
muslim_companion/locale/en_US/LC_MESSAGES/: django.po
muslim_companion/locale/fr_FR/LC_MESSAGES/: django.po
muslim_companion/locale/pt_BR/LC_MESSAGES/: django.po
muslim_companion/requirements/: base.txt
(+248 files in other folders)
